<resources>
    <string name="app_name">AlarmClock</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="alarm_menu_add">Add</string>
    <string name="repeat">重复：</string>
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>

    <string name="save">保存</string>
    <string name="alarm_alert_dismiss">知道啦</string>

    <string name="title_activity_alarm_main">AlarmMain</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_anniversay">AnniversayActivity</string>
</resources>
